# ClaudeBackend

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
claudebackend/: __init__.py  cicd.py  cli.py  config.py  mcp_server.py  models.py  orchestrator.py  prompts.py  tdd.py  watcher.py
claudebackend/agents/: coder.py  planner.py  security_auditor.py  security_reviewer.py
claudebackend/core/: client.py  context_builder.py  depgraph.py  events.py  git.py  github.py  graphviz.py  limits.py  pricing.py  verifier.py
claudebackend/core/drivers/: __init__.py  base.py  php.py  python.py
claudebackend/core/providers/: __init__.py  base.py  ollama.py  openai_compat.py
claudebackend/web/: __init__.py  app.py  review.py  runs.py  serialize.py
commands/: develop.md
docker/: Dockerfile
docs/: integrations.md  providers.md
docs/about/: README.md  de.md  en.md  fa.md  fr.md  ja.md  ru.md  zh.md
docs/install/: linux.md  local_ai.md  macos.md  windows.md
docs/superpowers/specs/: 2026-06-13-claudemigrate-py2to3-design.md  2026-06-14-claudebackend-design.md  2026-06-14-claudebackend-security-gate.md  2026-06-15-phase5-stage2-php-driver.md
scripts/: setup-linux.sh  setup-macos.sh  setup.ps1
skills/migrate-python-2-to-3/: SKILL.md
tests/: test_auth.py  test_cicd.py  test_cli.py  test_client.py  test_client_cost.py  test_client_providers.py  test_coder.py  test_config.py  test_context_builder.py  test_depgraph.py  test_drivers.py  test_e2e.py  test_events.py  test_fixture.py  test_git.py  test_github.py  test_graphviz.py  test_limits.py  test_logging.py  test_mcp.py  test_models.py  test_orchestrator.py  test_orchestrator_php.py  test_packaging.py  test_php_driver.py  test_planner.py  test_pricing.py  test_provider_ollama.py  test_provider_openai.py  test_security_auditor.py  test_security_reviewer.py  test_smoke.py  test_tdd.py  test_verifier.py  test_watcher.py  test_web_server.py
tests/fixtures/php_sample/: composer.json
tests/fixtures/py2_sample/: app.py  mathutils.py  test_sample.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: AppShell.tsx  CostSparkline.tsx  CounterBar.tsx  DiffViewer.tsx  GitEffectBanner.tsx  ReviewPanel.tsx  StageTracker.tsx  StepList.tsx  (+1 more)
(+21 files in other folders)
